Страница события и списка

--- a/site/events-item.html
+++ b/site/events-item.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ИП - События</title>
+    <title>ИП - Событие</title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -400,129 +400,127 @@
         <div class="pathway">
           <ul>
             <li><a href="#">События</a></li>
+            <li>></li>
+            <li><a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></li>
           </ul>
         </div>
-        <div class="page-name">
-          <h1>События</h1>
-          <p>События на тему строительства промышленных и иных объектов</p>
-        </div>
         <div class="main-left">
-          <div class="box-articles box-orange mar-bot-30">
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
-                </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
-                  </div>
-                </div>
-              </div>
+          <div class="box-text-item">
+            <div class="bmeta">
+              <div class="date">19 сентября 2014 года</div>
+              <div class="comments"><a href="#">61</a></div>
+              <div class="views">2726</div>
             </div>
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Модернизация КРУ и КСО</a></div>
-                <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
-                </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="box-articles">
             <div class="bname">
-              <h3>Ближайшие события</h3>
+              <h1>Выставка научного оборудования НИИ спорта РГУФКСМиТ</h1>
             </div>
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                <div class="itext">Без описания</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
-                </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
+            <div class="bcon bcon-text-style">
+              <div class="event-item mar-bot-30">
+                <div class="icon">
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
+                  <div class="address-date">
+                    <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
+                    <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
                   </div>
+                  <div class="add-to-cal"><a href="#">Добавить в Google Calendar  </a>/ <a href="#">Добавить в календарь (*.ics)</a></div>
                 </div>
+                <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
+              </div>
+              <p>В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.</p>
+              <p>«Мы договорились о выделении участка земли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров. </p>
+              <p>Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».</p>
+            </div>
+            <div class="event-organizers">
+              <div class="text">Российский государственный университет физической культуры, спорта, молодёжи и туризма, РГУФКСМиТ <br><a href="#">(все события этого организатора)</a>
+                <div class="contacts"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
               </div>
             </div>
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-2.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Модернизация КРУ и КСО</a></div>
-                <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
-                </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
-                  </div>
-                </div>
+            <div class="bmetabot">
+              <div class="share"><span>Поделиться</span>
+                <ul>
+                  <li class="vk"><a href="#"></a></li>
+                  <li class="fb"><a href="#"></a></li>
+                  <li class="tw"><a href="#"></a></li>
+                  <li class="in"><a href="#"></a></li>
+                </ul>
               </div>
             </div>
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Мастер-класс</span><span class="count">43</span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
+            <div class="box-comments">
+              <div class="bwrite">
+                <div class="bname">
+                  <h3>Комментарии к статье</h3><a href="#enter-popup">Войти</a>
                 </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
+                <div class="bcon">
+                  <div class="ava"><img src="img/ava.png" alt=""></div>
+                  <div class="text">
+                    <textarea placeholder=""></textarea>
                   </div>
+                  <div class="action"><a href="#" class="btn-orange">Оставить комментарий</a></div>
                 </div>
               </div>
-            </div>
-            <div class="item">
-              <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
-              <div class="icon">
-                <div class="iname"><a href="#">Состояние науки российской федерации</a></div>
-                <div class="itext">Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели</div>
-                <div class="imore"> <a href="#">Читать полностью</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Круглый стол</span><span class="count empty"></span></a></div>
-                <div class="address-date">
-                  <div class="ad-address">Москва, ул. Сиреневый бульвар, д.4</div>
-                  <div class="ad-date">27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00</div>
+              <div class="bcomments">
+                <div class="comment">
+                  <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
+                  <div class="ccon">
+                    <div class="name"><a href="#">Konrad Karlovich</a>
+                      <div class="date">1 час назад</div>
+                    </div>
+                    <div class="text">Я эту штуку не куплю. Работаю с Microsoft Office -- он умнее, чем я.</div>
+                    <div class="answer"><a href="#">Ответить</a></div>
+                  </div>
+                  <div class="comment">
+                    <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
+                    <div class="ccon">
+                      <div class="name"><a href="#">Konrad Karlovich</a>
+                        <div class="pep">
+                           
+                           > <a href="#">Влодко Чорный</a>
+                        </div>
+                        <div class="date">1 час назад</div>
+                      </div>
+                      <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                      <div class="answer"><a href="#">Ответить</a></div>
+                    </div>
+                    <div class="comment">
+                      <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
+                      <div class="ccon">
+                        <div class="name"><a href="#">Konrad Karlovich</a>
+                          <div class="date">1 час назад</div>
+                        </div>
+                        <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
+                        <div class="answer"><a href="#">Ответить</a></div>
+                      </div>
+                      <div class="comment">
+                        <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
+                        <div class="ccon">
+                          <div class="name"><a href="#">Konrad Karlovich</a>
+                            <div class="date">1 час назад</div>
+                          </div>
+                          <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                          <div class="answer"><a href="#">Ответить</a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="imeta">
-                  <div class="right mar-top-20m">
-                    <div class="comments"><a href="#">51</a></div>
-                    <div class="views"><a href="#">225</a></div>
+                <div class="comment">
+                  <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
+                  <div class="ccon">
+                    <div class="name"><a href="#">Konrad Karlovich</a>
+                      <div class="date">1 час назад</div>
+                    </div>
+                    <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
+                    <div class="answer"><a href="#">Ответить</a></div>
+                  </div>
+                </div>
+                <div class="comment">
+                  <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
+                  <div class="ccon">
+                    <div class="name"><a href="#">Konrad Karlovich</a>
+                      <div class="date">1 час назад</div>
+                    </div>
+                    <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
+                    <div class="answer"><a href="#">Ответить</a></div>
                   </div>
                 </div>
               </div>
