--- a/site/analytics.html
+++ b/site/analytics.html
@@ -29,7 +29,7 @@
     .system-menu a:hover {background:#e6e6e6; text-decoration:none;}
     .system-menu p.sep {margin:0; padding:5px 10px; min-height:2px; font-size:12px; border-top: 2px solid #000;}
   </style>
-  <div class="system-menu"><a href="analytics.html">Статья</a><a href="articles.html">Аналитические статьи </a><a href="docs-item.html">Документ </a><a href="docs.html">Документы </a><a href="events.html">События </a><a href="index.html">Главная </a><a href="info.html">Информация </a><a href="links.html">Ссылки </a><a href="lk.html">ЛК </a><a href="news.html">Новости </a><a href="reports.html">Отчеты</a><a href="requirements.html">Потребности</a><a href="requirements-comment.html">Потребности c комменатриями</a><a href="story-item.html">История/Новость</a></div>
+  <div class="system-menu"><a href="analytics.html">Статья</a><a href="articles.html">Статьи</a><a href="docs-item.html">Документ </a><a href="docs.html">Документы </a><a href="events-item.html">Событие </a><a href="events.html">События </a><a href="index.html">Главная </a><a href="info.html">Информация </a><a href="links.html">Ссылки </a><a href="lk.html">ЛК </a><a href="news.html">Новости </a><a href="reports.html">Отчеты</a><a href="requirements.html">Потребности</a><a href="requirements-comment.html">Потребность</a><a href="story-item.html">История/Новость</a></div>
   <div id="shikarniy">
     <div class="sidebar">
       <div class="logo"><a href="#"> </a></div>
@@ -313,7 +313,7 @@
                 <div class="toogle">-</div>
               </div>
               <div class="bcat-con">
-                <div class="item">
+                <div class="item active">
                   <div class="idate">
                     <div class="num">17</div>
                     <div class="day">октября</div>
