--- a/site/info.html
+++ b/site/info.html
@@ -26,7 +26,7 @@
     .system-menu a:hover {background:#e6e6e6; text-decoration:none;}
     .system-menu p.sep {margin:0; padding:5px 10px; min-height:2px; font-size:12px; border-top: 2px solid #000;}
   </style>
-  <div class="system-menu"><a href="analytics.html">Статья</a><a href="articles.html">Аналитические статьи </a><a href="docs-item.html">Документ </a><a href="docs.html">Документы </a><a href="events.html">События </a><a href="index.html">Главная </a><a href="info.html">Информация </a><a href="links.html">Ссылки </a><a href="lk.html">ЛК </a><a href="news.html">Новости </a><a href="reports.html">Отчеты</a><a href="requirements.html">Потребности</a><a href="requirements-comment.html">Потребности c комменатриями</a><a href="story-item.html">История/Новость</a></div>
+  <div class="system-menu"><a href="analytics.html">Статья</a><a href="articles.html">Статьи</a><a href="docs-item.html">Документ </a><a href="docs.html">Документы </a><a href="events-item.html">Событие </a><a href="events.html">События </a><a href="index.html">Главная </a><a href="info.html">Информация </a><a href="links.html">Ссылки </a><a href="lk.html">ЛК </a><a href="news.html">Новости </a><a href="reports.html">Отчеты</a><a href="requirements.html">Потребности</a><a href="requirements-comment.html">Потребность</a><a href="story-item.html">История/Новость</a></div>
   <div id="shikarniy">
     <div class="sidebar">
       <div class="logo"><a href="#"> </a></div>
@@ -310,7 +310,7 @@
                 <div class="toogle">-</div>
               </div>
               <div class="bcat-con">
-                <div class="item">
+                <div class="item active">
                   <div class="idate">
                     <div class="num">17</div>
                     <div class="day">октября</div>
@@ -408,7 +408,7 @@
           <p>Новости, аналитические статьи и истории успеха</p>
         </div>
         <div class="main-left">
-          <div class="box-news-prev-cat mar-bot-20">
+          <div class="box-news-prev-cat mar-bot-30">
             <div class="bcat"><a href="#">Новости				</a></div>
             <div class="bcon bcon-text-style">
               <div class="photo-desc-box-grey">
@@ -432,7 +432,7 @@
               </div>
             </div>
           </div>
-          <div class="box-news-prev-cat mar-bot-20">
+          <div class="box-news-prev-cat mar-bot-30">
             <div class="bcat"><a href="#">Истории успеха		</a></div>
             <div class="bcon bcon-text-style">
               <div class="photo-desc-box-grey">
@@ -458,7 +458,7 @@
               </div>
             </div>
           </div>
-          <div class="box-articles mar-bot-20">
+          <div class="box-articles mar-bot-30">
             <div class="bcat"><a href="#">Аналитические статьи</a></div>
             <div class="item">
               <div class="iprev"><img src="img/content/180-135-1.jpg" alt=""></div>
