--- a/site/equipments-item.html
+++ b/site/equipments-item.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ИП - Услуга</title>
+    <title>ИП - Оборудование</title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
