--- a/site/articles.html
+++ b/site/articles.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ИП - Документы</title>
+    <title>ИП - Статьи</title>
     <!-- Meta-->
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="favicon.png">
@@ -20,14 +20,6 @@
   </head>
 </html>
 <body>
-  <style>
-    .system-menu {position: fixed; width:auto; bottom:0; z-index: 9999; background: #fff; opacity:.3; overflow:hidden; transition:all 0.3s ease-out;}
-    .system-menu:hover {width:auto; opacity: 1;}
-    .system-menu a {display:block; padding:10px 15px; font-size:12px; color: #000;}
-    .system-menu a:hover {background:#e6e6e6; text-decoration:none;}
-    .system-menu p.sep {margin:0; padding:5px 10px; min-height:2px; font-size:12px; border-top: 2px solid #000;}
-  </style>
-  <div class="system-menu"><a href="analytics.html">Статья</a><a href="articles.html">Статьи</a><a href="docs-item.html">Документ </a><a href="docs.html">Документы </a><a href="events-item.html">Событие </a><a href="events.html">События </a><a href="index.html">Главная </a><a href="info.html">Информация </a><a href="links.html">Ссылки </a><a href="lk.html">ЛК </a><a href="news.html">Новости </a><a href="reports.html">Отчеты</a><a href="requirements.html">Потребности</a><a href="requirements-comment.html">Потребность</a><a href="services-item.html">Услуга</a><a href="services.html">Услуги</a><a href="story-item.html">История/Новость</a></div>
   <div id="shikarniy">
     <div class="sidebar">
       <div class="logo"><a href="#"> </a></div>
