Обновление виджета календаря

--- a/site/main.html
+++ b/site/main.html
@@ -13,11 +13,12 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/lightSlider.css" rel="stylesheet">
+    <link href="css/jquery.datetimepicker.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="js/jquery.lightSlider.min.js" type="text/javascript"></script>
-    <script src="js/jquery.supercal.js" type="text/javascript"></script>
+    <script src="js/jquery.datetimepicker.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
 </html>
@@ -779,9 +780,7 @@
               </div>
             </div>
             <div class="calendar-wrap">
-              <div class="calendar">
-                <div class="calendar-widget"></div>
-              </div>
+              <input type="text" class="calendar-widget">
             </div>
           </div>
           <div class="box-support">
