--- a/site/lk.html
+++ b/site/lk.html
@@ -12,9 +12,11 @@
     <link href="fonts/fonts.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/sweet-alert.css" rel="stylesheet">
     <!-- Scripts-->
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+    <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
 </html>
@@ -355,7 +357,7 @@
         <div class="wrap">
           <div class="menu">
             <ul>
-              <li><a href="#">Программы по развитию</a></li>
+              <li><a href="#" class="js-open-coming-soon">Программы по развитию</a></li>
               <li><a href="#">Отчеты</a></li>
               <li><a href="#">О проекте</a></li>
             </ul>
