--- a/site/main.html
+++ b/site/main.html
@@ -386,12 +386,14 @@
         <div class="slider-index-wrap">
           <ul class="slider-index">
             <li> <img src="img/content/slider-1.jpg" alt="">
-              <div class="desc">Информационный портал, содействующий <br>развитию инжиниринговой деятельности<br>и промышленного дизайна</div>
+              <div class="desc">Информационный портал, содействующий развитию инжиниринговой деятельности<br>и промышленного дизайна</div>
             </li>
             <li> <img src="img/content/slider-2.jpg" alt="">
-              <div class="desc">Информационный портал, содействующий <br>развитию инжиниринговой деятельности <br>и промышленного дизайна</div>
+              <div class="desc">Наиболее полная информация <br>о рынке инжиниринговых услуг</div>
             </li>
-            <li><img src="img/content/slider-3.jpg" alt=""></li>
+            <li><img src="img/content/slider-3.jpg" alt="">
+              <div class="desc">Экспертное сообщество профессионалов <br>в сфере инжиниринга и промдизайна</div>
+            </li>
           </ul>
         </div>
         <div class="main-left">
