changed all login popups to newest one

--- a/site/about.html
+++ b/site/about.html
@@ -376,7 +376,7 @@
         </div>
       </div>
       <div class="hide">
-        <div data-remodal-id="login-popup" class="remodal login-popup enter-site">
+        <div data-remodal-id="enter-popup" class="remodal login-popup enter-site">
           <h1>Вход на сайт</h1>
           <div class="social">
             <ul class="inline">
@@ -449,13 +449,13 @@
               <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br><a href="#">(пользовательское соглашение)</a></div>
             </form>
           </div>
-          <div class="call-to-register">Уже регистрировались? <a href="#login-popup">Вход</a></div>
+          <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
         </div>
       </div>
       <div class="main-width main-wrap">
         <div class="pathway">
           <ul>
-            <li><a href="#login-popup">О проекте</a></li>
+            <li><a href="#">О проекте</a></li>
           </ul>
         </div>
         <div class="page-name">
