--- a/site/disscus-item.html
+++ b/site/disscus-item.html
@@ -377,19 +377,80 @@
         </div>
       </div>
       <div class="hide">
-        <div data-remodal-id="enter-popup" class="remodal">
-          <div class="ins login-popup"><span>Авторизуйтесь</span>
-            <div class="social">
-              <ul>
-                <li class="vk"><a href="#"></a></li>
-                <li class="fb"><a href="#"></a></li>
-                <li class="tw"><a href="#"></a></li>
-                <li class="od"><a href="#"></a></li>
-                <li class="you"><a href="#"></a></li>
-                <li class="rss"><a href="#"> </a></li>
-              </ul>
-            </div>
+        <div data-remodal-id="enter-popup" class="remodal login-popup enter-site">
+          <h1>Вход на сайт</h1>
+          <div class="social">
+            <ul class="inline">
+              <li class="in"><a href="#"> </a></li>
+              <li class="vk"><a href="#"></a></li>
+              <li class="fb"><a href="#"></a></li>
+              <li class="tw"><a href="#"></a></li>
+              <li class="od"><a href="#"></a></li>
+              <li class="you"><a href="#"></a></li>
+            </ul>
           </div>
+          <div class="old-way">
+            <hr>
+            <div class="or">или</div>
+            <form>
+              <div class="formgroup">
+                <label for="login__email">Эл. почта</label>
+                <input type="password" id="login__email" autofocus class="float-right">
+              </div>
+              <div class="formgroup">
+                <label for="login__password">Пароль</label>
+                <input type="password" id="login__password" class="float-right">
+              </div>
+              <div class="formgroup">
+                <input type="checkbox" id="login__short-session">
+                <label for="login__short-session">Чужой компьютер</label><a href="#" class="forgot-pass float-right">Забыли пароль?</a>
+              </div>
+              <div class="formgroup">
+                <input type="submit" value="Войти">
+              </div>
+            </form>
+          </div>
+          <div class="call-to-register">Еще не зарегистрированы? <a href="#register-popup">Регистрация</a></div>
+        </div>
+        <div data-remodal-id="register-popup" class="remodal login-popup enter-site">
+          <h1>Регистрация</h1>
+          <div class="social">
+            <ul class="inline">
+              <li class="in"><a href="#"> </a></li>
+              <li class="vk"><a href="#"></a></li>
+              <li class="fb"><a href="#"></a></li>
+              <li class="tw"><a href="#"></a></li>
+              <li class="od"><a href="#"></a></li>
+              <li class="you"><a href="#"></a></li>
+            </ul>
+          </div>
+          <div class="old-way">
+            <hr>
+            <div class="or">или</div>
+            <form>
+              <div class="formgroup">
+                <label for="register__name">Имя</label>
+                <input type="password" id="register__name" autofocus class="float-right">
+              </div>
+              <div class="formgroup">
+                <label for="login__email">Эл. почта</label>
+                <input type="password" id="register__email" class="float-right">
+              </div>
+              <div class="formgroup">
+                <label for="login__password">Пароль</label>
+                <input type="password" id="register__password" class="float-right">
+              </div>
+              <div class="formgroup">
+                <input type="checkbox" id="register__short-session">
+                <label for="register__short-session">Чужой компьютер</label>
+              </div>
+              <div class="formgroup">
+                <input type="submit" value="зарегистрироваться">
+              </div>
+              <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br><a href="#">(пользовательское соглашение)</a></div>
+            </form>
+          </div>
+          <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
         </div>
       </div>
       <div class="main-width main-wrap">
