Проверка конфликта с js-open-coming-soon

--- a/site/equipments-item.html
+++ b/site/equipments-item.html
@@ -403,7 +403,7 @@
                       <li></li>
                     </ul>
                   </div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
+                  <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                 </div>
                 <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
               </div>
@@ -414,7 +414,7 @@
               <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
               <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
             </div>
-            <div class="order-service-cont"><a href="#" class="btn-orange inline">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
+            <div class="order-service-cont"><a href="#" class="btn-orange inline js-open-coming-soon">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
               <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
             </div>
             <div class="bmetabot">
@@ -451,7 +451,7 @@
                         <p>Изготовление деталей типа тел вращения</p>
                         <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
                       </div>
-                      <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                      <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
                       <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
                       <div class="imeta">
                         <div class="right mar-top-20m">
