--- a/site/requirements-comment.html
+++ b/site/requirements-comment.html
@@ -448,7 +448,7 @@
               <div class="formgroup">
                 <input type="submit" value="зарегистрироваться">
               </div>
-              <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br><a href="#">(пользовательское соглашение)</a></div>
+              <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
             </form>
           </div>
           <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
