--- a/site/analytics.html
+++ b/site/analytics.html
@@ -20,6 +20,18 @@
     <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/smooth-scroll.js" type="text/javascript"></script>
     <script src="js/jquery.remodal.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      smoothScroll.init({
+      	speed: 1000,
+      	easing: 'easeInOutCubic',
+      	offset: 69,
+      	updateURL: true,
+      	callbackBefore: function ( toggle, anchor ) {},
+      	callbackAfter: function ( toggle, anchor ) {}
+      });
+      
+      
+    </script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
 </html>
